[update] "light" skin

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title></title>
 	<script type="text/javascript" src="http://cdn.webix.io/edge/webix.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://cdn.webix.io/edge/webix.css">
+	<link rel="stylesheet" type="text/css" href="http://cdn.webix.io/edge/skins/light.css">
 
 	<script type="text/javascript" src="//localhost:3000/faye/client.js"></script>
 </head>
